@@ -1,3 +1,4 @@
+- restore progress bar when formatting ext3
 - fix range max value >2TB when creating a partition (useful for LVs >2TB)
 
 Version 10.4.158 - 3 August 2007, by Pascal "Pixel" Rigaux
