@@ -1,3 +1,6 @@
+- diskdrake:
+  o restore progress bar when formatting ext3
+
 Version 10.4.160 - 06 August 2007, by Thierry Vignaud
 
 - diskdrake: 
